Practica03/bin/sintactico/y.output
   0  $accept : programa $end

   1  programa : funciones main

   2  main : VOID MAIN '(' ')' '{' sentencias '}'

   3  funciones : funciones funcion
   4            |

   5  funcion : tipoFuncion ID '(' parametro ')' '{' cuerpo '}'

   6  tipoParametro : ID
   7                | CTE_ENTERA
   8                | CTE_REAL

   9  parametro : parametro ',' tipoSimple ID
  10            | tipoSimple ID
  11            |

  12  cuerpo : variables sentencias retorno
  13         |

  14  retorno : RETURN expresion ';'
  15          |

  16  tipoFuncion : VOID
  17              | tipoSimple

  18  sentencias : sentencias sentencia
  19             | sentencia

  20  sentencia : llamadaVariable
  21            | declaracionVariable
  22            | llamadaVariable '=' expresion ';'
  23            | declaracionVariable '=' expresion ';'
  24            | ID '.' ID '=' expresion ';'
  25            | estructura ';'
  26            | WHILE '(' expresion ')' '{' sentencias '}'
  27            | IF '(' expresion ')' '{' sentencias '}'
  28            | IF '(' expresion ')' sentencia
  29            | IF '(' expresion ')' '{' sentencias '}' ELSE '{' sentencias '}'
  30            | IF '(' expresion ')' sentencia ELSE sentencia
  31            | WRITE expresiones
  32            | READ expresiones
  33            | ID '(' parametroLlamada ')' ';'

  34  parametroLlamada : parametroLlamada ',' tipoParametro
  35                   |

  36  estructura : STRUCT '{' campos '}' ID

  37  campos : campos estructura
  38         | campos llamadaVariable
  39         | campos declaracionVariable
  40         | llamadaVariable
  41         | declaracionVariable

  42  llamadaVariable : ID
  43                  | ID '[' CTE_ENTERA ']'
  44                  | ID '[' CTE_ENTERA ']' '[' CTE_ENTERA ']'

  45  declaracionVariable : tipoSimple identificador ';'
  46                      | tipoSimple '[' CTE_ENTERA ']' identificador ';'
  47                      | tipoSimple '[' CTE_ENTERA ']' '[' CTE_ENTERA ']' identificador ';'

  48  expresiones : expresiones ',' expresion
  49              | expresion ';'

  50  expresion : ID
  51            | ID '[' CTE_ENTERA ']'
  52            | ID '[' CTE_ENTERA ']' '[' CTE_ENTERA ']'
  53            | CTE_ENTERA
  54            | CTE_REAL
  55            | CTE_CARACTER
  56            | expresion '+' expresion
  57            | expresion '*' expresion
  58            | expresion '/' expresion
  59            | expresion '-' expresion
  60            | expresion '%' expresion
  61            | expresion '>' expresion
  62            | expresion '<' expresion
  63            | expresion MAYORIGUALQUE expresion
  64            | expresion MENORIGUALQUE expresion
  65            | expresion DISTINTO expresion
  66            | expresion IGUALDAD expresion
  67            | expresion Y expresion
  68            | expresion O expresion
  69            | expresion '.' expresion
  70            | '-' expresion
  71            | '!' expresion
  72            | '(' expresion ')'
  73            | '(' tipoSimple ')' ID

  74  identificador : identificador ',' ID
  75                | ID

  76  tipoSimple : INT
  77             | DOUBLE
  78             | CHAR

state 0
	$accept : . programa $end  (0)
	funciones : .  (4)

	.  reduce 4

	programa  goto 1
	funciones  goto 2


state 1
	$accept : programa . $end  (0)

	$end  accept


state 2
	programa : funciones . main  (1)
	funciones : funciones . funcion  (3)

	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	VOID  shift 6
	.  error

	main  goto 7
	funcion  goto 8
	tipoFuncion  goto 9
	tipoSimple  goto 10


state 3
	tipoSimple : INT .  (76)

	.  reduce 76


state 4
	tipoSimple : DOUBLE .  (77)

	.  reduce 77


state 5
	tipoSimple : CHAR .  (78)

	.  reduce 78


state 6
	main : VOID . MAIN '(' ')' '{' sentencias '}'  (2)
	tipoFuncion : VOID .  (16)

	MAIN  shift 11
	ID  reduce 16


state 7
	programa : funciones main .  (1)

	.  reduce 1


state 8
	funciones : funciones funcion .  (3)

	.  reduce 3


state 9
	funcion : tipoFuncion . ID '(' parametro ')' '{' cuerpo '}'  (5)

	ID  shift 12
	.  error


state 10
	tipoFuncion : tipoSimple .  (17)

	.  reduce 17


state 11
	main : VOID MAIN . '(' ')' '{' sentencias '}'  (2)

	'('  shift 13
	.  error


state 12
	funcion : tipoFuncion ID . '(' parametro ')' '{' cuerpo '}'  (5)

	'('  shift 14
	.  error


state 13
	main : VOID MAIN '(' . ')' '{' sentencias '}'  (2)

	')'  shift 15
	.  error


state 14
	funcion : tipoFuncion ID '(' . parametro ')' '{' cuerpo '}'  (5)
	parametro : .  (11)

	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	')'  reduce 11
	','  reduce 11

	parametro  goto 16
	tipoSimple  goto 17


state 15
	main : VOID MAIN '(' ')' . '{' sentencias '}'  (2)

	'{'  shift 18
	.  error


state 16
	funcion : tipoFuncion ID '(' parametro . ')' '{' cuerpo '}'  (5)
	parametro : parametro . ',' tipoSimple ID  (9)

	')'  shift 19
	','  shift 20
	.  error


state 17
	parametro : tipoSimple . ID  (10)

	ID  shift 21
	.  error


state 18
	main : VOID MAIN '(' ')' '{' . sentencias '}'  (2)

	READ  shift 22
	WRITE  shift 23
	WHILE  shift 24
	IF  shift 25
	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 26
	ID  shift 27
	.  error

	sentencias  goto 28
	tipoSimple  goto 29
	sentencia  goto 30
	llamadaVariable  goto 31
	declaracionVariable  goto 32
	estructura  goto 33


state 19
	funcion : tipoFuncion ID '(' parametro ')' . '{' cuerpo '}'  (5)

	'{'  shift 34
	.  error


state 20
	parametro : parametro ',' . tipoSimple ID  (9)

	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	.  error

	tipoSimple  goto 35


state 21
	parametro : tipoSimple ID .  (10)

	.  reduce 10


state 22
	sentencia : READ . expresiones  (32)

	CTE_ENTERA  shift 36
	CTE_REAL  shift 37
	CTE_CARACTER  shift 38
	ID  shift 39
	'!'  shift 40
	'-'  shift 41
	'('  shift 42
	.  error

	expresion  goto 43
	expresiones  goto 44


state 23
	sentencia : WRITE . expresiones  (31)

	CTE_ENTERA  shift 36
	CTE_REAL  shift 37
	CTE_CARACTER  shift 38
	ID  shift 39
	'!'  shift 40
	'-'  shift 41
	'('  shift 42
	.  error

	expresion  goto 43
	expresiones  goto 45


state 24
	sentencia : WHILE . '(' expresion ')' '{' sentencias '}'  (26)

	'('  shift 46
	.  error


state 25
	sentencia : IF . '(' expresion ')' '{' sentencias '}'  (27)
	sentencia : IF . '(' expresion ')' sentencia  (28)
	sentencia : IF . '(' expresion ')' '{' sentencias '}' ELSE '{' sentencias '}'  (29)
	sentencia : IF . '(' expresion ')' sentencia ELSE sentencia  (30)

	'('  shift 47
	.  error


state 26
	estructura : STRUCT . '{' campos '}' ID  (36)

	'{'  shift 48
	.  error


state 27
	sentencia : ID . '.' ID '=' expresion ';'  (24)
	sentencia : ID . '(' parametroLlamada ')' ';'  (33)
	llamadaVariable : ID .  (42)
	llamadaVariable : ID . '[' CTE_ENTERA ']'  (43)
	llamadaVariable : ID . '[' CTE_ENTERA ']' '[' CTE_ENTERA ']'  (44)

	'['  shift 49
	'.'  shift 50
	'('  shift 51
	READ  reduce 42
	WRITE  reduce 42
	WHILE  reduce 42
	IF  reduce 42
	ELSE  reduce 42
	INT  reduce 42
	DOUBLE  reduce 42
	CHAR  reduce 42
	STRUCT  reduce 42
	RETURN  reduce 42
	ID  reduce 42
	'='  reduce 42
	'}'  reduce 42


state 28
	main : VOID MAIN '(' ')' '{' sentencias . '}'  (2)
	sentencias : sentencias . sentencia  (18)

	READ  shift 22
	WRITE  shift 23
	WHILE  shift 24
	IF  shift 25
	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 26
	ID  shift 27
	'}'  shift 52
	.  error

	tipoSimple  goto 29
	sentencia  goto 53
	llamadaVariable  goto 31
	declaracionVariable  goto 32
	estructura  goto 33


state 29
	declaracionVariable : tipoSimple . identificador ';'  (45)
	declaracionVariable : tipoSimple . '[' CTE_ENTERA ']' identificador ';'  (46)
	declaracionVariable : tipoSimple . '[' CTE_ENTERA ']' '[' CTE_ENTERA ']' identificador ';'  (47)

	ID  shift 54
	'['  shift 55
	.  error

	identificador  goto 56


state 30
	sentencias : sentencia .  (19)

	.  reduce 19


state 31
	sentencia : llamadaVariable .  (20)
	sentencia : llamadaVariable . '=' expresion ';'  (22)

	'='  shift 57
	READ  reduce 20
	WRITE  reduce 20
	WHILE  reduce 20
	IF  reduce 20
	ELSE  reduce 20
	INT  reduce 20
	DOUBLE  reduce 20
	CHAR  reduce 20
	STRUCT  reduce 20
	RETURN  reduce 20
	ID  reduce 20
	'}'  reduce 20


state 32
	sentencia : declaracionVariable .  (21)
	sentencia : declaracionVariable . '=' expresion ';'  (23)

	'='  shift 58
	READ  reduce 21
	WRITE  reduce 21
	WHILE  reduce 21
	IF  reduce 21
	ELSE  reduce 21
	INT  reduce 21
	DOUBLE  reduce 21
	CHAR  reduce 21
	STRUCT  reduce 21
	RETURN  reduce 21
	ID  reduce 21
	'}'  reduce 21


state 33
	sentencia : estructura . ';'  (25)

	';'  shift 59
	.  error


state 34
	funcion : tipoFuncion ID '(' parametro ')' '{' . cuerpo '}'  (5)
	cuerpo : .  (13)

	variables  shift 60
	'}'  reduce 13

	cuerpo  goto 61


state 35
	parametro : parametro ',' tipoSimple . ID  (9)

	ID  shift 62
	.  error


state 36
	expresion : CTE_ENTERA .  (53)

	.  reduce 53


state 37
	expresion : CTE_REAL .  (54)

	.  reduce 54


state 38
	expresion : CTE_CARACTER .  (55)

	.  reduce 55


state 39
	expresion : ID .  (50)
	expresion : ID . '[' CTE_ENTERA ']'  (51)
	expresion : ID . '[' CTE_ENTERA ']' '[' CTE_ENTERA ']'  (52)

	'['  shift 63
	READ  reduce 50
	WRITE  reduce 50
	WHILE  reduce 50
	IF  reduce 50
	ELSE  reduce 50
	INT  reduce 50
	DOUBLE  reduce 50
	CHAR  reduce 50
	STRUCT  reduce 50
	RETURN  reduce 50
	ID  reduce 50
	Y  reduce 50
	O  reduce 50
	MAYORIGUALQUE  reduce 50
	MENORIGUALQUE  reduce 50
	DISTINTO  reduce 50
	IGUALDAD  reduce 50
	'>'  reduce 50
	'<'  reduce 50
	'+'  reduce 50
	'-'  reduce 50
	'*'  reduce 50
	'/'  reduce 50
	'%'  reduce 50
	'.'  reduce 50
	')'  reduce 50
	'}'  reduce 50
	','  reduce 50
	';'  reduce 50


state 40
	expresion : '!' . expresion  (71)

	CTE_ENTERA  shift 36
	CTE_REAL  shift 37
	CTE_CARACTER  shift 38
	ID  shift 39
	'!'  shift 40
	'-'  shift 41
	'('  shift 42
	.  error

	expresion  goto 64


state 41
	expresion : '-' . expresion  (70)

	CTE_ENTERA  shift 36
	CTE_REAL  shift 37
	CTE_CARACTER  shift 38
	ID  shift 39
	'!'  shift 40
	'-'  shift 41
	'('  shift 42
	.  error

	expresion  goto 65


state 42
	expresion : '(' . expresion ')'  (72)
	expresion : '(' . tipoSimple ')' ID  (73)

	CTE_ENTERA  shift 36
	CTE_REAL  shift 37
	CTE_CARACTER  shift 38
	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	ID  shift 39
	'!'  shift 40
	'-'  shift 41
	'('  shift 42
	.  error

	tipoSimple  goto 66
	expresion  goto 67


state 43
	expresiones : expresion . ';'  (49)
	expresion : expresion . '+' expresion  (56)
	expresion : expresion . '*' expresion  (57)
	expresion : expresion . '/' expresion  (58)
	expresion : expresion . '-' expresion  (59)
	expresion : expresion . '%' expresion  (60)
	expresion : expresion . '>' expresion  (61)
	expresion : expresion . '<' expresion  (62)
	expresion : expresion . MAYORIGUALQUE expresion  (63)
	expresion : expresion . MENORIGUALQUE expresion  (64)
	expresion : expresion . DISTINTO expresion  (65)
	expresion : expresion . IGUALDAD expresion  (66)
	expresion : expresion . Y expresion  (67)
	expresion : expresion . O expresion  (68)
	expresion : expresion . '.' expresion  (69)

	Y  shift 68
	O  shift 69
	MAYORIGUALQUE  shift 70
	MENORIGUALQUE  shift 71
	DISTINTO  shift 72
	IGUALDAD  shift 73
	'>'  shift 74
	'<'  shift 75
	'+'  shift 76
	'-'  shift 77
	'*'  shift 78
	'/'  shift 79
	'%'  shift 80
	'.'  shift 81
	';'  shift 82
	.  error


state 44
	sentencia : READ expresiones .  (32)
	expresiones : expresiones . ',' expresion  (48)

	','  shift 83
	READ  reduce 32
	WRITE  reduce 32
	WHILE  reduce 32
	IF  reduce 32
	ELSE  reduce 32
	INT  reduce 32
	DOUBLE  reduce 32
	CHAR  reduce 32
	STRUCT  reduce 32
	RETURN  reduce 32
	ID  reduce 32
	'}'  reduce 32


state 45
	sentencia : WRITE expresiones .  (31)
	expresiones : expresiones . ',' expresion  (48)

	','  shift 83
	READ  reduce 31
	WRITE  reduce 31
	WHILE  reduce 31
	IF  reduce 31
	ELSE  reduce 31
	INT  reduce 31
	DOUBLE  reduce 31
	CHAR  reduce 31
	STRUCT  reduce 31
	RETURN  reduce 31
	ID  reduce 31
	'}'  reduce 31


state 46
	sentencia : WHILE '(' . expresion ')' '{' sentencias '}'  (26)

	CTE_ENTERA  shift 36
	CTE_REAL  shift 37
	CTE_CARACTER  shift 38
	ID  shift 39
	'!'  shift 40
	'-'  shift 41
	'('  shift 42
	.  error

	expresion  goto 84


state 47
	sentencia : IF '(' . expresion ')' '{' sentencias '}'  (27)
	sentencia : IF '(' . expresion ')' sentencia  (28)
	sentencia : IF '(' . expresion ')' '{' sentencias '}' ELSE '{' sentencias '}'  (29)
	sentencia : IF '(' . expresion ')' sentencia ELSE sentencia  (30)

	CTE_ENTERA  shift 36
	CTE_REAL  shift 37
	CTE_CARACTER  shift 38
	ID  shift 39
	'!'  shift 40
	'-'  shift 41
	'('  shift 42
	.  error

	expresion  goto 85


state 48
	estructura : STRUCT '{' . campos '}' ID  (36)

	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	ID  shift 86
	.  error

	tipoSimple  goto 29
	llamadaVariable  goto 87
	declaracionVariable  goto 88
	campos  goto 89


state 49
	llamadaVariable : ID '[' . CTE_ENTERA ']'  (43)
	llamadaVariable : ID '[' . CTE_ENTERA ']' '[' CTE_ENTERA ']'  (44)

	CTE_ENTERA  shift 90
	.  error


state 50
	sentencia : ID '.' . ID '=' expresion ';'  (24)

	ID  shift 91
	.  error


state 51
	sentencia : ID '(' . parametroLlamada ')' ';'  (33)
	parametroLlamada : .  (35)

	.  reduce 35

	parametroLlamada  goto 92


state 52
	main : VOID MAIN '(' ')' '{' sentencias '}' .  (2)

	.  reduce 2


state 53
	sentencias : sentencias sentencia .  (18)

	.  reduce 18


state 54
	identificador : ID .  (75)

	.  reduce 75


state 55
	declaracionVariable : tipoSimple '[' . CTE_ENTERA ']' identificador ';'  (46)
	declaracionVariable : tipoSimple '[' . CTE_ENTERA ']' '[' CTE_ENTERA ']' identificador ';'  (47)

	CTE_ENTERA  shift 93
	.  error


state 56
	declaracionVariable : tipoSimple identificador . ';'  (45)
	identificador : identificador . ',' ID  (74)

	','  shift 94
	';'  shift 95
	.  error


state 57
	sentencia : llamadaVariable '=' . expresion ';'  (22)

	CTE_ENTERA  shift 36
	CTE_REAL  shift 37
	CTE_CARACTER  shift 38
	ID  shift 39
	'!'  shift 40
	'-'  shift 41
	'('  shift 42
	.  error

	expresion  goto 96


state 58
	sentencia : declaracionVariable '=' . expresion ';'  (23)

	CTE_ENTERA  shift 36
	CTE_REAL  shift 37
	CTE_CARACTER  shift 38
	ID  shift 39
	'!'  shift 40
	'-'  shift 41
	'('  shift 42
	.  error

	expresion  goto 97


state 59
	sentencia : estructura ';' .  (25)

	.  reduce 25


state 60
	cuerpo : variables . sentencias retorno  (12)

	READ  shift 22
	WRITE  shift 23
	WHILE  shift 24
	IF  shift 25
	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 26
	ID  shift 27
	.  error

	sentencias  goto 98
	tipoSimple  goto 29
	sentencia  goto 30
	llamadaVariable  goto 31
	declaracionVariable  goto 32
	estructura  goto 33


state 61
	funcion : tipoFuncion ID '(' parametro ')' '{' cuerpo . '}'  (5)

	'}'  shift 99
	.  error


state 62
	parametro : parametro ',' tipoSimple ID .  (9)

	.  reduce 9


state 63
	expresion : ID '[' . CTE_ENTERA ']'  (51)
	expresion : ID '[' . CTE_ENTERA ']' '[' CTE_ENTERA ']'  (52)

	CTE_ENTERA  shift 100
	.  error


state 64
	expresion : expresion . '+' expresion  (56)
	expresion : expresion . '*' expresion  (57)
	expresion : expresion . '/' expresion  (58)
	expresion : expresion . '-' expresion  (59)
	expresion : expresion . '%' expresion  (60)
	expresion : expresion . '>' expresion  (61)
	expresion : expresion . '<' expresion  (62)
	expresion : expresion . MAYORIGUALQUE expresion  (63)
	expresion : expresion . MENORIGUALQUE expresion  (64)
	expresion : expresion . DISTINTO expresion  (65)
	expresion : expresion . IGUALDAD expresion  (66)
	expresion : expresion . Y expresion  (67)
	expresion : expresion . O expresion  (68)
	expresion : expresion . '.' expresion  (69)
	expresion : '!' expresion .  (71)

	'.'  shift 81
	READ  reduce 71
	WRITE  reduce 71
	WHILE  reduce 71
	IF  reduce 71
	ELSE  reduce 71
	INT  reduce 71
	DOUBLE  reduce 71
	CHAR  reduce 71
	STRUCT  reduce 71
	RETURN  reduce 71
	ID  reduce 71
	Y  reduce 71
	O  reduce 71
	MAYORIGUALQUE  reduce 71
	MENORIGUALQUE  reduce 71
	DISTINTO  reduce 71
	IGUALDAD  reduce 71
	'>'  reduce 71
	'<'  reduce 71
	'+'  reduce 71
	'-'  reduce 71
	'*'  reduce 71
	'/'  reduce 71
	'%'  reduce 71
	')'  reduce 71
	'}'  reduce 71
	','  reduce 71
	';'  reduce 71


state 65
	expresion : expresion . '+' expresion  (56)
	expresion : expresion . '*' expresion  (57)
	expresion : expresion . '/' expresion  (58)
	expresion : expresion . '-' expresion  (59)
	expresion : expresion . '%' expresion  (60)
	expresion : expresion . '>' expresion  (61)
	expresion : expresion . '<' expresion  (62)
	expresion : expresion . MAYORIGUALQUE expresion  (63)
	expresion : expresion . MENORIGUALQUE expresion  (64)
	expresion : expresion . DISTINTO expresion  (65)
	expresion : expresion . IGUALDAD expresion  (66)
	expresion : expresion . Y expresion  (67)
	expresion : expresion . O expresion  (68)
	expresion : expresion . '.' expresion  (69)
	expresion : '-' expresion .  (70)

	'.'  shift 81
	READ  reduce 70
	WRITE  reduce 70
	WHILE  reduce 70
	IF  reduce 70
	ELSE  reduce 70
	INT  reduce 70
	DOUBLE  reduce 70
	CHAR  reduce 70
	STRUCT  reduce 70
	RETURN  reduce 70
	ID  reduce 70
	Y  reduce 70
	O  reduce 70
	MAYORIGUALQUE  reduce 70
	MENORIGUALQUE  reduce 70
	DISTINTO  reduce 70
	IGUALDAD  reduce 70
	'>'  reduce 70
	'<'  reduce 70
	'+'  reduce 70
	'-'  reduce 70
	'*'  reduce 70
	'/'  reduce 70
	'%'  reduce 70
	')'  reduce 70
	'}'  reduce 70
	','  reduce 70
	';'  reduce 70


state 66
	expresion : '(' tipoSimple . ')' ID  (73)

	')'  shift 101
	.  error


state 67
	expresion : expresion . '+' expresion  (56)
	expresion : expresion . '*' expresion  (57)
	expresion : expresion . '/' expresion  (58)
	expresion : expresion . '-' expresion  (59)
	expresion : expresion . '%' expresion  (60)
	expresion : expresion . '>' expresion  (61)
	expresion : expresion . '<' expresion  (62)
	expresion : expresion . MAYORIGUALQUE expresion  (63)
	expresion : expresion . MENORIGUALQUE expresion  (64)
	expresion : expresion . DISTINTO expresion  (65)
	expresion : expresion . IGUALDAD expresion  (66)
	expresion : expresion . Y expresion  (67)
	expresion : expresion . O expresion  (68)
	expresion : expresion . '.' expresion  (69)
	expresion : '(' expresion . ')'  (72)

	Y  shift 68
	O  shift 69
	MAYORIGUALQUE  shift 70
	MENORIGUALQUE  shift 71
	DISTINTO  shift 72
	IGUALDAD  shift 73
	'>'  shift 74
	'<'  shift 75
	'+'  shift 76
	'-'  shift 77
	'*'  shift 78
	'/'  shift 79
	'%'  shift 80
	'.'  shift 81
	')'  shift 102
	.  error


state 68
	expresion : expresion Y . expresion  (67)

	CTE_ENTERA  shift 36
	CTE_REAL  shift 37
	CTE_CARACTER  shift 38
	ID  shift 39
	'!'  shift 40
	'-'  shift 41
	'('  shift 42
	.  error

	expresion  goto 103


state 69
	expresion : expresion O . expresion  (68)

	CTE_ENTERA  shift 36
	CTE_REAL  shift 37
	CTE_CARACTER  shift 38
	ID  shift 39
	'!'  shift 40
	'-'  shift 41
	'('  shift 42
	.  error

	expresion  goto 104


state 70
	expresion : expresion MAYORIGUALQUE . expresion  (63)

	CTE_ENTERA  shift 36
	CTE_REAL  shift 37
	CTE_CARACTER  shift 38
	ID  shift 39
	'!'  shift 40
	'-'  shift 41
	'('  shift 42
	.  error

	expresion  goto 105


state 71
	expresion : expresion MENORIGUALQUE . expresion  (64)

	CTE_ENTERA  shift 36
	CTE_REAL  shift 37
	CTE_CARACTER  shift 38
	ID  shift 39
	'!'  shift 40
	'-'  shift 41
	'('  shift 42
	.  error

	expresion  goto 106


state 72
	expresion : expresion DISTINTO . expresion  (65)

	CTE_ENTERA  shift 36
	CTE_REAL  shift 37
	CTE_CARACTER  shift 38
	ID  shift 39
	'!'  shift 40
	'-'  shift 41
	'('  shift 42
	.  error

	expresion  goto 107


state 73
	expresion : expresion IGUALDAD . expresion  (66)

	CTE_ENTERA  shift 36
	CTE_REAL  shift 37
	CTE_CARACTER  shift 38
	ID  shift 39
	'!'  shift 40
	'-'  shift 41
	'('  shift 42
	.  error

	expresion  goto 108


state 74
	expresion : expresion '>' . expresion  (61)

	CTE_ENTERA  shift 36
	CTE_REAL  shift 37
	CTE_CARACTER  shift 38
	ID  shift 39
	'!'  shift 40
	'-'  shift 41
	'('  shift 42
	.  error

	expresion  goto 109


state 75
	expresion : expresion '<' . expresion  (62)

	CTE_ENTERA  shift 36
	CTE_REAL  shift 37
	CTE_CARACTER  shift 38
	ID  shift 39
	'!'  shift 40
	'-'  shift 41
	'('  shift 42
	.  error

	expresion  goto 110


state 76
	expresion : expresion '+' . expresion  (56)

	CTE_ENTERA  shift 36
	CTE_REAL  shift 37
	CTE_CARACTER  shift 38
	ID  shift 39
	'!'  shift 40
	'-'  shift 41
	'('  shift 42
	.  error

	expresion  goto 111


state 77
	expresion : expresion '-' . expresion  (59)

	CTE_ENTERA  shift 36
	CTE_REAL  shift 37
	CTE_CARACTER  shift 38
	ID  shift 39
	'!'  shift 40
	'-'  shift 41
	'('  shift 42
	.  error

	expresion  goto 112


state 78
	expresion : expresion '*' . expresion  (57)

	CTE_ENTERA  shift 36
	CTE_REAL  shift 37
	CTE_CARACTER  shift 38
	ID  shift 39
	'!'  shift 40
	'-'  shift 41
	'('  shift 42
	.  error

	expresion  goto 113


state 79
	expresion : expresion '/' . expresion  (58)

	CTE_ENTERA  shift 36
	CTE_REAL  shift 37
	CTE_CARACTER  shift 38
	ID  shift 39
	'!'  shift 40
	'-'  shift 41
	'('  shift 42
	.  error

	expresion  goto 114


state 80
	expresion : expresion '%' . expresion  (60)

	CTE_ENTERA  shift 36
	CTE_REAL  shift 37
	CTE_CARACTER  shift 38
	ID  shift 39
	'!'  shift 40
	'-'  shift 41
	'('  shift 42
	.  error

	expresion  goto 115


state 81
	expresion : expresion '.' . expresion  (69)

	CTE_ENTERA  shift 36
	CTE_REAL  shift 37
	CTE_CARACTER  shift 38
	ID  shift 39
	'!'  shift 40
	'-'  shift 41
	'('  shift 42
	.  error

	expresion  goto 116


state 82
	expresiones : expresion ';' .  (49)

	.  reduce 49


state 83
	expresiones : expresiones ',' . expresion  (48)

	CTE_ENTERA  shift 36
	CTE_REAL  shift 37
	CTE_CARACTER  shift 38
	ID  shift 39
	'!'  shift 40
	'-'  shift 41
	'('  shift 42
	.  error

	expresion  goto 117


state 84
	sentencia : WHILE '(' expresion . ')' '{' sentencias '}'  (26)
	expresion : expresion . '+' expresion  (56)
	expresion : expresion . '*' expresion  (57)
	expresion : expresion . '/' expresion  (58)
	expresion : expresion . '-' expresion  (59)
	expresion : expresion . '%' expresion  (60)
	expresion : expresion . '>' expresion  (61)
	expresion : expresion . '<' expresion  (62)
	expresion : expresion . MAYORIGUALQUE expresion  (63)
	expresion : expresion . MENORIGUALQUE expresion  (64)
	expresion : expresion . DISTINTO expresion  (65)
	expresion : expresion . IGUALDAD expresion  (66)
	expresion : expresion . Y expresion  (67)
	expresion : expresion . O expresion  (68)
	expresion : expresion . '.' expresion  (69)

	Y  shift 68
	O  shift 69
	MAYORIGUALQUE  shift 70
	MENORIGUALQUE  shift 71
	DISTINTO  shift 72
	IGUALDAD  shift 73
	'>'  shift 74
	'<'  shift 75
	'+'  shift 76
	'-'  shift 77
	'*'  shift 78
	'/'  shift 79
	'%'  shift 80
	'.'  shift 81
	')'  shift 118
	.  error

